RESOLVED FIXED25942
ImageWx ::draw and ::drawPattern don't call ImageObserver::didDraw()
https://bugs.webkit.org/show_bug.cgi?id=25942
Summary ImageWx ::draw and ::drawPattern don't call ImageObserver::didDraw()
Kevin Watters
Reported 2009-05-21 10:40:59 PDT
ImageObserver::didDraw helps the cache purge alive resources when necessary (thanks https://bugs.webkit.org/show_bug.cgi?id=25856).
Attachments
add didDraw() in ::draw and ::drawPattern (1.59 KB, patch)
2009-05-21 10:43 PDT, Kevin Watters
kevino: review+
Kevin Watters
Comment 1 2009-05-21 10:43:44 PDT
Created attachment 30548 [details] add didDraw() in ::draw and ::drawPattern Adds didDraw() to draw and drawPattern.
Kevin Ollivier
Comment 2 2009-05-21 17:58:35 PDT
Landed in r44017, thanks! :-)
Note You need to log in before you can comment on or make changes to this bug.