Reviewed by Kevin Ollivier.

Notify ImageObserver::didDraw to help the cache purge alive resources.

https://bugs.webkit.org/show_bug.cgi?id=25942


Canonical link: https://commits.webkit.org/35904@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44017 268f45cc-cd09-0410-ab3c-d52691b4dbfc