WebCore/platform/graphics/wx/ImageWx.cpp
@@ -30,6 +30,7 @@
 #include "FloatConversion.h"
 #include "FloatRect.h"
 #include "GraphicsContext.h"
+#include "ImageObserver.h"
 #include "TransformationMatrix.h"
 
 #include <math.h>
@@ -170,6 +171,9 @@ void BitmapImage::draw(GraphicsContext* ctxt, const FloatRect& dst, const FloatR
 #endif
 
     ctxt->restore();
+
+    if (ImageObserver* observer = imageObserver())
+        observer->didDraw(this);
 }
 
 void BitmapImage::drawPattern(GraphicsContext* ctxt, const FloatRect& srcRect, const TransformationMatrix& patternTransform, const FloatPoint& phase, CompositeOperator, const FloatRect& dstRect)
@@ -243,6 +247,8 @@ void BitmapImage::drawPattern(GraphicsContext* ctxt, const FloatRect& srcRect, c
 
     startAnimation();
 
+    if (ImageObserver* observer = imageObserver())
+        observer->didDraw(this);
 }
 
 void BitmapImage::checkForSolidColor()
